File upload template (#192)
* File upload template

* update method name and field URL

* update GetDocumentByID in the route

* update swagger documentation.

* Update internal/controllers/documents_controller.go
